--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@ img{
 <p>雖然環保葬有許多的優點，但是從民國91年政府發布的
 <a href="https://mort.moi.gov.tw/frontsite/statute/dcaStatuteAction101.do?method=doListAll&siteId=MTAx&subMenuId=511" target="_blank">《殯葬管理條例》</a>到現在已快16年的時間，還是可以看到不少實施上的問題。<br>根據南華大學生死學系助理教授楊國柱撰寫的《推廣環保多元葬必須克服的幾個問題》，他提出公墓內外環保葬雙軌制的問題，其認為灑葬和植存處理骨灰的方式幾乎相同，主要差別只在於地點不同，法規上卻有著不同規定，如《殯葬管理條例》第12條規定公墓為方便喪家治喪，須提供一些基礎設施服務，如服務中心、停車場、公共衛生、給水及照明設備等，但植存區卻沒有相關法規，奇怪的是，使用植存的民眾難道就不需要這些服務了嗎？
 </p> 
-
+<p>test1</p>
+<p>test2</p>
 </body>
 </html>
 
